src/objects/Polling_EMEA__c.object
<CustomObject>
    <fields>
        <fullName>InterfaceName__c</fullName>
        <label>Interface Name</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities and Accounts</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastSuccessfulRunTime__c</fullName>
        <label>Last Successful Run Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OperatingUnit__c</fullName>
        <label>Operating Unit</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrchKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Orch Key</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Polling EMEA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Polling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Polling EMEA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>